# ToDo--fullstackapp

./: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  README.md  RUN_INSTRUCTIONS.md  debug_test.py  launch_app.py  main.py  pyproject.toml  run_todo.py  test_core_functionality.py
.specify/memory/: constitution.md
history/prompts/constitution/: 1-create-constitution.constitution.prompt.md  20260102-constitution-update-full-stack.md
history/prompts/green/: 5-complete-implementation.green.prompt.md
history/prompts/plan/: 3-create-plan.plan.prompt.md
history/prompts/spec/: 2-create-specification.spec.prompt.md
history/prompts/tasks/: 4-create-tasks.tasks.prompt.md
specs/: speckit.constitution  speckit.plan  speckit.specify  speckit.tasks
src/: __init__.py  main.py
src/cli/: __init__.py  interface.py
src/core/: __init__.py  manager.py  models.py
